Iniciando a implementação cartão com pagseguro

--- a/html/index.html
+++ b/html/index.html
@@ -148,6 +148,13 @@
                                             </select>
                                         </div>
                                     </div>
+
+                                    <div class="row">
+                                        <div class="col">
+                                            <input type="checkbox" id="cardSave">
+                                            <label for="cardSave">Salvar cartão para compras futuras.</label>
+                                        </div>
+                                    </div>
                                 </form>
 
                                 <a href="#" class="mb-4 mt-4 btn btn-success" id="payAction">Confirmar compra</a>
